--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <build>
 
-        <defaultGoal>clean generate-sources compile install</defaultGoal>
+        <defaultGoal>generate-sources compile install</defaultGoal>
         <extensions>
             <extension>
                 <groupId>kr.motd.maven</groupId>
@@ -65,6 +65,14 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
